--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Margherita Febbrari</h1>
-    <p>Medical Designer & Researcher</p>
+    <p>MEDICAL DESIGN + FORESIGHT</p>
   </header>
 
   <section id="projects">
