--- a/index.html
+++ b/index.html
@@ -7,37 +7,33 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Margherita Febbrari</h1>
-    <p>MEDICAL DESIGN + FORESIGHT</p>
+  <header class="main-header">
+    <div class="left">
+      <h1>Margherita Febbrari</h1>
+      <p class="subtitle">DESIGN + FORESIGHT</p>
+    </div>
+    <nav class="right">
+      <ul>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <section id="projects">
-    <h2>Selected Projects</h2>
-    <div class="project">
-      <img src="images/project1.jpg" alt="Project 1">
-      <div class="description">
-        <h3>DualMed Device</h3>
-        <p>Wearable IV device that improves mobility and patient autonomy.</p>
-      </div>
-    </div>
-    <!-- Aggiungi altri progetti qui -->
-  </section>
+  <main>
+    <section id="projects">
+      <h2>Selected Projects</h2>
+      <!-- Inserisci qui i tuoi progetti -->
+    </section>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Designer passionate about healthcare innovation, UX, and future scenarios. Currently developing medtech startups and building the future of patient-centered design.</p>
-  </section>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>Designer e ricercatrice nel settore medicale, con una passione per il foresight, i trend futuri e la progettazione di dispositivi innovativi che migliorano l’esperienza umana e clinica.</p>
+    </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:hello@margheritafebbrari.com">hello@margheritafebbrari.com</a></p>
-    <p><a href="https://www.linkedin.com/in/margherita-febbrari/" target="_blank">LinkedIn</a></p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Margherita Febbrari</p>
-  </footer>
-</body>
-</html>
-add index
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:hello@margheritafebbrari.com">hello@margheritafebbrari.com</a></p>
+      <p><a href="https://www.linkedin.com/in/margherita-febbrari/" target="_blank">LinkedIn</a></p>
+    </section>
