--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
   <main>
     <section id="projects">
-      <h2>Selected Projects</h2>
+      <h2>Projects</h2>
       <!-- Inserisci qui i tuoi progetti -->
     </section>
 
     <section id="about">
       <h2>About Me</h2>
-      <p>Designer e ricercatrice nel settore medicale, con una passione per il foresight, i trend futuri e la progettazione di dispositivi innovativi che migliorano l’esperienza umana e clinica.</p>
+      <p></p>
     </section>
 
     <section id="contact">
