--- a/index.html
+++ b/index.html
@@ -23,17 +23,27 @@
 
   <main>
     <section id="projects">
-      <h2>Projects</h2>
-      <!-- Inserisci qui i tuoi progetti -->
+      <h2>Selected Projects</h2>
+      <!-- Progetti qui -->
     </section>
 
     <section id="about">
       <h2>About Me</h2>
-      <p></p>
+      <p>Designer e ricercatrice nel settore medicale, con una passione per il foresight, i trend futuri e la progettazione di dispositivi innovativi che migliorano l’esperienza umana e clinica.</p>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:hello@margheritafebbrari.com">hello@margheritafebbrari.com</a></p>
-      <p><a href="https://www.linkedin.com/in/margherita-febbrari/" target="_blank">LinkedIn</a></p>
+      <p>Email: <a href="mailto:info@margheritafebbrari.com">info@margheritafebbrari.com</a></p>
+      <p>
+        <a href="https://www.linkedin.com/in/margherita-febbrari/" target="_blank">LinkedIn</a> |
+        <a href="https://www.instagram.com/margherita.febbrari/" target="_blank">Instagram</a>
+      </p>
     </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Margherita Febbrari</p>
+  </footer>
+</body>
+</html>
