--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Margherita Febbrari – Portfolio</title>
+  <title>Margherita Febbrari – Projects</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -21,23 +21,23 @@
     </nav>
   </header>
 
+    <section id="about">
+      <h2>About Me</h2>
+      <p>Innovation with a focus on people and care. I connect ideas, needs, and change.</p>
+    </section>
+  
   <main>
     <section id="projects">
       <h2>Selected Projects</h2>
       <!-- Progetti qui -->
     </section>
 
-    <section id="about">
-      <h2>About Me</h2>
-      <p>Designer e ricercatrice nel settore medicale, con una passione per il foresight, i trend futuri e la progettazione di dispositivi innovativi che migliorano l’esperienza umana e clinica.</p>
-    </section>
-
     <section id="contact">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:info@margheritafebbrari.com">info@margheritafebbrari.com</a></p>
       <p>
-        <a href="https://www.linkedin.com/in/margherita-febbrari/" target="_blank">LinkedIn</a> |
-        <a href="https://www.instagram.com/margherita.febbrari/" target="_blank">Instagram</a>
+        <a href="https://www.linkedin.com/in/margherita-febbrari-268694186/" target="_blank">LinkedIn</a> |
+        <a href="https://www.instagram.com/margheritafebbrari/" target="_blank">Instagram</a>
       </p>
     </section>
   </main>
