--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     </div>
     <nav class="right">
       <ul>
-        <li><a href="#projects">Projects</a></li>
         <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
 
+    <main>
     <section id="about">
       <h2>About Me</h2>
       <p>Innovation with a focus on people and care. I connect ideas, needs, and change.</p>
