--- a/index.html
+++ b/index.html
@@ -21,19 +21,18 @@
     </nav>
   </header>
 
-    <main>
-    <section id="about">
+  <main>
+    <section id="about" class="content-block">
       <h2>About Me</h2>
       <p>Innovation with a focus on people and care. I connect ideas, needs, and change.</p>
     </section>
-  
-  <main>
-    <section id="projects">
+
+    <section id="projects" class="content-block">
       <h2>Selected Projects</h2>
       <!-- Progetti qui -->
     </section>
 
-    <section id="contact">
+    <section id="contact" class="content-block">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:info@margheritafebbrari.com">info@margheritafebbrari.com</a></p>
       <p>
