--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <main>
     <section id="about" class="content-block">
       <h2>About Me</h2>
-      <p>Innovation with a focus on people and care. I connect ideas, needs, and change.</p>
-    </section>
+      <p class="tagline">Innovation with a focus on people and care. I connect ideas, needs, and change.</section>
+
 
     <section id="projects" class="content-block">
       <h2>Selected Projects</h2>
