--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section id="contact" class="content-block">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:info@margheritafebbrari.com">info@margheritafebbrari.com</a></p>
+      <p>Email: <a href="info@margheritafebbrari.com">info@margheritafebbrari.com</a></p>
       <p>
         <a href="https://www.linkedin.com/in/margherita-febbrari-268694186/" target="_blank">LinkedIn</a> |
         <a href="https://www.instagram.com/margheritafebbrari/" target="_blank">Instagram</a>
