--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <main>
     <section id="about" class="content-block">
       <h2>About Me</h2>
-      <p class="tagline">Innovation with a focus on people and care. I connect ideas, needs, and change.</section>
+      <p>Innovation with a focus on people and care. I connect ideas, needs, and change.<p>
+    </section>
 
 
     <section id="projects" class="content-block">
