--- a/index.html
+++ b/index.html
@@ -1,50 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Margherita Febbrari – Projects</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Margherita Febbrari</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="main-header">
-    <div class="left">
+
+  <header class="fixed-header">
+    <div class="top-left">
       <h1>Margherita Febbrari</h1>
-      <p class="subtitle">DESIGN + FORESIGHT</p>
+      <p class="subtitle">Design + Foresight</p>
     </div>
-    <nav class="right">
+    
+    <nav class="top-right">
       <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="projects.html">PROJECTS</a></li>
+        <li><a href="collaborations.html">COLLABS</a></li>
+        <li><a href="more.html">MORE</a></li>
       </ul>
     </nav>
+
+    <div class="bottom-right">
+      <div class="social-links">
+        <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a> |
+        <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+      </div>
+      <a href="mailto:info@margheritafebbrari.com" class="contact-button">Contact Me</a>
+    </div>
+
   </header>
 
-  <main>
-    <section id="about" class="content-block">
-      <h2>About Me</h2>
-      <p>Innovation with a focus on people and care. I connect ideas, needs, and change.<p>
-    </section>
-
-
-    <section id="projects" class="content-block">
-      <h2>Selected Projects</h2>
-      <!-- Progetti qui -->
-    </section>
-
-    <section id="contact" class="content-block">
-      <h2>Contact</h2>
-      <p>Email: <a href="info@margheritafebbrari.com">info@margheritafebbrari.com</a></p>
-      <p>
-        <a href="https://www.linkedin.com/in/margherita-febbrari-268694186/" target="_blank">LinkedIn</a> |
-        <a href="https://www.instagram.com/margheritafebbrari/" target="_blank">Instagram</a>
-      </p>
-    </section>
+  <main class="main-content">
+    <!-- Qui dentro cambia il contenuto per ogni pagina -->
   </main>
 
-  <footer>
-    <p>&copy; 2025 Margherita Febbrari</p>
-  </footer>
 </body>
 </html>
