--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Margherita Febbrari</h1>
       <p class="subtitle">Design + Foresight</p>
     </div>
-    
+
     <nav class="top-right">
       <ul>
         <li><a href="about.html">ABOUT</a></li>
@@ -34,7 +34,7 @@
   </header>
 
   <main class="main-content">
-    <!-- Qui dentro cambia il contenuto per ogni pagina -->
+    <!-- Qui il contenuto della pagina -->
   </main>
 
 </body>
