--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="fixed-header">
     <div class="top-left">
       <h1>Margherita Febbrari</h1>
-      <p class="subtitle">Design + Foresight</p>
+      <p class="subtitle">DESIGN + FORESIGHT</p>
     </div>
 
     <nav class="top-right">
