--- a/index.html
+++ b/index.html
@@ -25,17 +25,5 @@
 
     <div class="bottom-right">
       <div class="social-links">
-        <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a> |
-        <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-      </div>
-      <a href="mailto:info@margheritafebbrari.com" class="contact-button">Contact Me</a>
-    </div>
-
-  </header>
-
-  <main class="main-content">
-    <!-- Qui il contenuto della pagina -->
-  </main>
-
-</body>
-</html>
+        <a href="https://www.linkedin.com/in/margherita-febbrari-268694186/" target="_blank">LinkedIn</a> |
+        <
