--- a/index.html
+++ b/index.html
@@ -26,4 +26,18 @@
     <div class="bottom-right">
       <div class="social-links">
         <a href="https://www.linkedin.com/in/margherita-febbrari-268694186/" target="_blank">LinkedIn</a> |
-        <
+        <a href="https://www.instagram.com/margheritafebbrari/" target="_blank">Instagram</a>
+      </div>
+      <div class="contact-link">
+        <a href="mailto:info@margheritafebbrari.com" class="contact-button">Contact Me</a>
+      </div>
+    </div>
+    
+  </header>
+
+  <main class="main-content">
+    <!-- Qui il contenuto della pagina -->
+  </main>
+
+</body>
+</html>
