--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Margherita Febbrari</title>
+  <link rel="stylesheet" href="style.css"> <!-- Questo serve -->
+</head>
+<body>
+
 <header class="fixed-header">
   <div class="top-left">
     <h1>Margherita Febbrari</h1>
@@ -21,3 +31,10 @@
     <a href="mailto:info@margheritafebbrari.com" class="contact-button">Contact Me</a>
   </div>
 </header>
+
+<main class="main-content">
+  <!-- Qui puoi mettere il contenuto -->
+</main>
+
+</body>
+</html>
