--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,70 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Projects – Margherita Febbrari</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+<header class="fixed-header">
+  <div class="top-left">
+    <h1>Margherita Febbrari</h1>
+    <p class="subtitle">DESIGN + FORESIGHT</p>
+  </div>
+
+  <nav class="top-right">
+    <ul>
+      <li><a href="about.html">ABOUT</a></li>
+      <li><a href="projects.html">PROJECTS</a></li>
+      <li><a href="collaborations.html">COLLABS</a></li>
+      <li><a href="more.html">MORE</a></li>
+    </ul>
+  </nav>
+
+  <div class="bottom-right">
+    <div class="social-links">
+      <a href="https://www.linkedin.com/in/margherita-febbrari-268694186/" target="_blank">LinkedIn</a> |
+      <a href="https://www.instagram.com/margheritafebbrari/" target="_blank">Instagram</a>
+    </div>
+    <a href="mailto:info@margheritafebbrari.com" class="contact-button">Contact Me</a>
+  </div>
+</header>
+
+<main class="main-content">
+  <section class="projects-grid">
+    <div class="project-box">
+      <h3>DualMed Device</h3>
+      <p>Wearable IV system for autonomy</p>
+    </div>
+
+    <div class="project-box">
+      <h3>Flare Monitor</h3>
+      <p>Vital signs wearable</p>
+    </div>
+
+    <div class="project-box">
+      <h3>Red Bull Activation</h3>
+      <p>STI awareness with brand power</p>
+    </div>
+
+    <div class="project-box">
+      <h3>Kinder UX Redesign</h3>
+      <p>Design + constraints in toys</p>
+    </div>
+
+    <div class="project-box">
+      <h3>Paraguay Care Model</h3>
+      <p>Healthcare innovation in rural settings</p>
+    </div>
+
+    <div class="project-box">
+      <h3>Xeos Wearable</h3>
+      <p>Research & usability studies</p>
+    </div>
+  </section>
+</main>
+
+</body>
+</html>
